# postgrest-rs

./: Cargo.toml  README.md
src/: builder.rs  lib.rs
tests/: client.rs  multi_schema.rs
